--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/home",
-      "destination": "/home"
-    }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
